--- a/_site.yml
+++ b/_site.yml
@@ -8,4 +8,8 @@ navbar:
   right:
     - text: "Home"
       href: index.html
+    - text: "Blog"      
+      href: blog.html 
+    - text: "About"
+      href: index.html
 output: distill::distill_article
