--- a/_site.yml
+++ b/_site.yml
@@ -10,7 +10,9 @@ navbar:
     - text: "Home"
       href: index.html
     - text: "Blog"      
-      href: blog.html 
+      href: blog.html
+    - text: "Publications"      
+      href: publications.html 
     - text: "About"
       href: index.html
 output: distill::distill_article
